k8/gke/africannames-managed-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: afn-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: afn-ip-address
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://africannames.app"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  defaultBackend:
    service:
      name: africannamesfront
      port:
        number: 80
  rules:
  - host: africannames.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: africannamesfront
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: africannameswebapp
            port:
              number: 8080
